Cookie Popup Functionality Implemented

--- a/index.html
+++ b/index.html
@@ -33,20 +33,22 @@
         <div class="hero__img"></div>
       </section>
       <section class="rest"></section>
-      <div class="cookie">
+      <!-- <div class="cookie">
         <div class="cookie__icons">
           <svg class="cookie__icon cookie__icon--cross">
-            <use xlink:href="/SVG/cross.svg"></use>
+            <use href="/SVG/cross.svg"></use>
           </svg>
           <svg class="cookie__icon cookie__icon--gear">
-            <use xlink:href="/SVG/cog.svg"></use>
+            <use href="/SVG/cog.svg"></use>
           </svg>
         </div>
         <p class="cookie__text">
           We use cookies to improve your user experience.
         </p>
-        <button class="cookie__button">I Accept</button>
-      </div>
+        <div class="cookie__buttons">
+          <button class="cookie__button">I Accept</button>
+        </div>
+      </div> -->
     </div>
   </body>
 </html>
